# matchbox-server

./: .gitignore  Cargo.toml  Makefile  README.md  comments.sh  source-game-setup-whitelist.sh  source-game-setup.sh
.github/workflows/: main.yaml  pr.yaml  publish-npm.yaml  release.yaml
examples/: client-auth-demo.rs
game_registry_service/: Cargo.toml
game_registry_service/migrations/: 20251024183058_initial_schema.sql
game_registry_service/src/: files.rs  main.rs  manifests.rs
jules-scratch/verification/: verify_friends_list.py
matchbox-auth-common/: Cargo.toml
matchbox-auth-common/src/: lib.rs
matchbox_web/: README.md  package-lock.json  package.json  test.html  vite.config.js  vite.config.webcomponents.js
matchbox_web/matchbox-web/: package-lock.json  package.json  svelte.config.js
matchbox_web/matchbox-web/src/lib/: matchbox-service.js
matchbox_web/matchbox-web/src/lib/components/: MatchboxAuth.svelte
matchbox_web/src/lib/: index.js  matchbox-service.js  polyfills.js  web-components.js
matchbox_web/src/lib/components/: CreateLobby.svelte  LobbyList.svelte  MatchboxAuth.svelte  MatchboxFriendsList.svelte  MatchboxLobbies.svelte  PubKeyDisplay.svelte
matchbox_web/src/routes/: +page.svelte
src/: auth.rs  helpers.rs  lib.rs  lobby.rs  main.rs  state.rs  topology.rs
tests/: extract-pubkey-from-token.sh  helpers.rs  host_and_get_url.sh  integration_test.rs  join_lobby_and_get_url.sh  websocket_test.rs
