[package]
name = "matchbox_server"
version = "0.11.0"
edition = "2021"
description = "A signaling server for WebRTC peer-to-peer full-mesh networking"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "matchbox_server"
path = "src/main.rs"

[dependencies]
matchbox_signaling = { version = "0.11" }
matchbox_protocol = { version = "0.11", features = ["json"] }
async-trait = "0.1"
axum = { version = "0.7.5", features = ["ws"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
clap = { version = "4.3", features = ["derive", "env"] }
thiserror = "1.0"
tokio-stream = "0.1"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
jsonwebtoken = "9.2"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10.8"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serial_test = "2.0.0"
thiserror = "1.0"
futures-util = "0.3"
